@@ -96,10 +96,10 @@
 			<h2 id="archives">Mailing List Archives</h2>
 	
 			<ul>
-				<li><a href="/list/NPDSMailingListV1.mbox">Volume 1</a> : 13 Oct 2000 &#8211; 08 Jan 2001</li>
-				<li><a href="/list/NPDSMailingListV2.mbox">Volume 2</a> : 17 Jan 2001 &#8211; 24 Jan 2002</li>
-				<li><a href="/list/NPDSMailingListV3.mbox">Volume 3</a> : 26 Jan 2002 &#8211; 13 Dec 2002</li>
-				<li><a href="/list/NPDSMailingListV4.mbox">Volume 4</a> : 28 Jan 2003 &#8211; 03 Jan 2004</li>
+				<li><a href="/list/NPDSMailingListV1.mbox">Digests Volume 1</a> : 13 Oct 2000 &#8211; 08 Jan 2001</li>
+				<li><a href="/list/NPDSMailingListV2.mbox">Digests Volume 2</a> : 17 Jan 2001 &#8211; 24 Jan 2002</li>
+				<li><a href="/list/NPDSMailingListV3.mbox">Digests Volume 3</a> : 26 Jan 2002 &#8211; 13 Dec 2002</li>
+				<li><a href="/list/NPDSMailingListV4.mbox">Digests Volume 4</a> : 28 Jan 2003 &#8211; 03 Jan 2004</li>
 				<li>More archives to come &#8230;</li>
 			</ul>
 		
